--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_ENV=local
-APP_KEY=base64:8CC+TclJLpwI+LJi+l4HJzReOGzyi8FdPnzzrHEf16E=
+APP_KEY=base64:NH9D3aN5cU4Ci5ycaw/6DCIDFnFuhDO0ttBS65/0rQE=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
@@ -7,9 +7,9 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=carrinho
+DB_DATABASE=curso_carrinho_compras
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -30,3 +30,5 @@ MAIL_ENCRYPTION=null
 PUSHER_KEY=
 PUSHER_SECRET=
 PUSHER_APP_ID=
+
+LOCALE=pt-br
