#25 - Desenvolvendo o layout do carrinho de compras

--- a/.env
+++ b/.env
@@ -7,9 +7,9 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=curso_carrinho_compras
+DB_DATABASE=carrinho
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
